--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -383,3 +383,18 @@
   publisher={Springer}
 }
 
+@techreport{jansen-lira,
+  title={LIRA: Lightweight incentivized routing for anonymity},
+  author={Jansen, Rob and Johnson, Aaron and Syverson, Paul},
+  year={2013},
+  institution={DTIC Document}
+}
+
+@inproceedings{jansen-braid,
+  title={Recruiting new Tor relays with BRAIDS},
+  author={Jansen, Rob and Hopper, Nicholas and Kim, Yongdae},
+  booktitle={Proceedings of the 17th ACM conference on Computer and communications security},
+  pages={319--328},
+  year={2010},
+  organization={ACM}
+}
