--- a/experimentation/unittests.tex
+++ b/experimentation/unittests.tex
@@ -67,6 +67,6 @@ the action that has to be taken, and by who if necessary.
 @0:111 stop_dispersy
 @0:112 stop
 \end{FVerbatim}
-    \caption{One fo the gumby test scenarios}
+    \caption{One of the gumby definition files.}
     \label{fig:exp-gumby-scenario}
 \end{figure}
