--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -1,5 +1,5 @@
 \chapter{Related work}
-In 2006 the notion of bandwidth as a currency was introduced.
+In 2007 the notion of bandwidth as a currency was introduced.
 In 2009 the first BitCoins were mined.
 These events can be seen as the first steps in currency or reputation systems.
 In this chapter we will discuss related work on tamper-proof interaction histories in currency or reputation systems.
@@ -19,10 +19,11 @@ There are two more projects worth to briefly mention because of similairity to t
 and the struggle to build a reputation system.
 These projects are not so thoroughly explained as the blockchain
 as they were not used as a starting point in designing MultiChain.
-The Tor project is working on a implementation of a reputation system, Tor coin,
-in an effort to incentivize collaboration.
-There are currently multiple proposals\cite{androulaki-torincentive}\cite{chen-torincentive}\cite{dingledine-torincentive}\cite{ghosh-torincentive}\cite{jansen-torincentive}.
+
+The Tor project is working on a implementation of a reputation system in an effort to incentivize collaboration\cite{dingledine-torincentive}.
+There are currently multiple proposals: PAR\cite{androulaki-torincentive}, BRAIDS\cite{jansen-braid}, LIRA\cite{jansen-lira}, TEARS \cite{jansen-torincentive}, TorCoin\cite{ghosh-torincentive}, and XPAY\cite{chen-torincentive}.
 The amount of proposals demonstrate the complexity of creating a reputation system.
+
 The InterPlanetary File System \(IPFS\) is a peer-to-peer distributed file system with similairities to the Tribler project.
 IPFS uses an incentivized block exchange to improve collaboration\cite{benet-ipfs}.
 IPFS is interesting because of the large and active following it has gathered on the internet.
