--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -1,19 +1,20 @@
 \chapter{Introduction}
 \label{chp:introduction}
 Tribler is a peer-to-peer file sharing program developed by the Delft University of Technology for research purposes.
+Tribler was started in 2008.
 Tribler expands the BitTorrent protocol and has added multiple improvements on this protocol.
 The main focus of Tribler is to make security and privacy the default for Internet users
 and make it impossible to shut the infrastructure of the Internet down.
 A fully distributed program, not relying on any central component, is needed to achieve this.
 Tribler has been designed and build using this methodology\cite{Pouwelse-tribler}\cite{Bakker-tribler}.
 A distributed network requires collaboration of it peers to achieve success.
-A schreenshot of Tribler can be seen in Figure \ref{fig:tribler-schreenshot}
+A screenshot of Tribler can be seen in Figure \ref{fig:tribler-screenshot}
 This master thesis was conducted as part of the research mission to improve the collaboration within Tribler.
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.3]{introduction/figs/tribler-screenshot.png}}
-	\caption{Schreenshot of Tribler v6.4.3.}
-	\label{fig:tribler-schreenshot}
+	\caption{Screenshot of Tribler v6.4.3.}
+	\label{fig:tribler-screenshot}
 \end{figure}
 
 \section{Tribler}
