--- a/design/design.tex
+++ b/design/design.tex
@@ -1,9 +1,10 @@
 \chapter{Design and implementation}
 This chapter presents the design of MultiChain and how it was implemented.
-We will explain how MultiChain adresses the freeriding problem.
-We will describe how MultiChain is part of Tribler and its main pillar of design.
+The first thing that will be introduced is how MultiChain is implemented within Tribler
+to outline the context of the design and implementation.
 The contents of blocks are presented and how they form chains in MultiChain.
 We will cover the creation of blocks and the multiple implications of the chosen design.
+We will explain how MultiChain adresses the freeriding problem.
 Additional pheripheral systems that work with MultiChain are also explained.
 
 \input{design/community.tex}
