--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -2,5 +2,6 @@
 
 \input{experimentation/unittests.tex}
 \input{experimentation/singlerequest/singlerequest.tex}
+\input{experimentation/synthetic/synthetic.tex}
 \input{experimentation/deadlock/deadlock.tex}
 
