Niels revisions: abstract, front.

--- a/frontcover.tex
+++ b/frontcover.tex
@@ -4,7 +4,7 @@
 
 \begin{center}
 \LARGE{MultiChain:\\
-       		an incremental step in a new distributed data structure}
+       		An incremental step in a new distributed data structure}
 \end{center}
 
 \vspace{1.5cm}
