--- a/graduationdata.tex
+++ b/graduationdata.tex
@@ -26,7 +26,7 @@ MultiChain: an incremental step in a new distributed data structure\\
 %examples:
 %prof. dr. ir. H. J. Sips (chair) & Delft University of Technology \\
 %ir. dr. D. H. J. Epema           & Delft University of Technology \\
-Prof. dr. ir. H. J. Sips            & Delft University Of Technology \\
+Prof. dr. ir. H. J. Sips            & Delft University of Technology \\
 dr. ir. J. A. Pouwelse        & Delft University of Technology \\
 dr. ir. Z. Erkin              & Delft University of Technology \\
 \end{tabular}
