--- a/thesis.tex
+++ b/thesis.tex
@@ -20,6 +20,8 @@
 \usepackage{todonotes}
 % Boxed verbatim for experiments
 \usepackage{fancyvrb}
+% Side by side packages
+\usepackage{subfigure}
 
 \newsavebox{\FVerbBox}
 \newenvironment{FVerbatim}
