Niels revisions: preface

--- a/preface.tex
+++ b/preface.tex
@@ -7,28 +7,29 @@ is only rivaled by the speculation of the enormous possibilities
 of the underlying technology of the block chain.
 The block chain is the first technology, seen with real world adoption,
 that allows to register transactions without a trusted third party.
-But the block chain has several limitations in scalabillity 
-that will limit Bitcoins in fully replacing traditional currencies with a digital currency.
-It also limits block chain as a scalable basis for a large scale reputation system, 
+The block chain has several limitations in scalability
+that will limit Bitcoins in fully replacing traditional currency.
+It limits block chain as a scalable base for a large scale reputation system,
 similar to a digital currency, with vast amounts of transactions.
-These developments provides motivation to research the properties and possibilities of a variant of the block chain:
+These developments provide motivation to research the properties and possibilities of a new distributed data structure:
 MultiChain.
 
 \vspace{1\baselineskip}
 
 \noindent
-I would like to acknowledge several people that helped me during my master thesis.
-First I would to heartily thank dr.ir. Johan Pouwelse for his mentoring and helping me in setting goals and achieving these goals.
-Furthermore I would like to thank dr.ir. Cor-Paul Bezemer for his guidance and help with implementing within Tribler. 
+I would like to acknowledge several people that helped me during my master's thesis.
+First I would to heartily thank dr.ir. Johan Pouwelse for his mentoring and
+helping me in setting goals and achieving these goals.
+Furthermore, I would like to thank dr.ir. Cor-Paul Bezemer for his guidance and help with getting to know Tribler.
 I also would like to thank Elric Milon and Lipu Fei for answering countless questions
-and problems I encountered during the programming phase of my thesis.
+and helping in solving problems I encountered during the programming phase of my thesis.
 For the excellent feedback and help to improve my code I would like to thank dr.ir. Niels Zeilemaker.
 His support by adding functionality to Dispersy was also invaluable.
-Rob Ruigrok was doing his master thesis at the same time
+Rob Ruigrok was doing his master's thesis at the same time
 and helped me to avoid problems he encountered before I experienced them as well and
 I am grateful for this help.
 I am also very thankful for the companionship I felt within my work room 
-and I would like to thank especially Hans Bogerts BSc, Niels Doekeijmeier BSc and Ernst van der Hoeven BSc.
+and I would like to thank especially Hans van den Bogert BSc, Niels Doekemeijer BSc and Ernst van der Hoeven BSc.
 You certainly made my work more enjoyable.
 
 \vspace{1\baselineskip}
