Niels revisions: contents

--- a/design/mutual_exclusion.tex
+++ b/design/mutual_exclusion.tex
@@ -1,4 +1,4 @@
-\section{Single operations on the chain}
+\section{Atomic operations on the chain}
 \label{sect:deadlock}
 In a chain only a single block of a peer is allowed to point to a previous block.
 A peer cannot have multiple blocks belonging to him all pointing to the same previous block.
