--- a/experimentation/synthetic/synthetic.tex
+++ b/experimentation/synthetic/synthetic.tex
@@ -2,7 +2,8 @@
 \subsubsection{Simple download }
 In this experiment we measure if MultiChain can correctly track the upload and download amounts between two peers.
 A gumby scenario was created that mimicks running a download within Tribler.
-In the scenario a file of 100 MB is downloaded at different speeds, respectively 1000 KB/s, 2000 KB/s, and 3000 KB/s.
+In the scenario a file of 100 MB is downloaded at different speeds,
+respectively 500 KB/s, 750 KB/s, 1000 KB/s, 1250 KB/s, 2000 KB/s, and 3000 KB/s.
 The scheduler waits for 1000MB before scheduling a block.
 The upload and download of the file is done by three different pairs of seeders and leechers.
 Every second these amounts are reported to have been download to the scheduler of MultiChain.
@@ -28,11 +29,17 @@ The plots show that MultiChain is able to correctly track the download and uploa
 There are no hitches in the figures and the amounts go up in fixed increments corresponding to the different speeds.
 This means that MultiChain is fast enough to correctly track the amounts.
 
-
+The download speeds below the threshold of 1000 MB of the scheduler
+are not distinguishable from the download at the threshold speed.
+This is because the scheduler waits until the threshold is reached before initiating the block.
+The amount is tracked in the same amount of blocks,
+but the total time of the experiment is longer for these experiments.
+If the speed goes above the threshold, then this is reflected in the figure.
 
 The graph in Figure \ref{fig:synthetic-graph} shows the MultiChain created by the experiment.
 The graph is disconnected, because the different pairs of seeders and leechers did not interact with each other.
-So no block that would connect their chains are created leaving the graph disconnected.
+So no block that would connect their chains is created,
+This leaves the graph disconnected.
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.06]{experimentation/synthetic/synthetic.png}}
@@ -53,6 +60,8 @@ The final version is chosen when Dispersy did connect all the peers.
 \subsubsection{Anonymous download}
 In an anonymous download scenario the data is downloaded through multiple hops.
 The data is passed through the hops.
-In the following experiment we mimick this scenario in a 
+In the following experiment we mimick this scenario.
+Data passes through multiple hops before it reaches the endpoint.
+
 
 
