Niels revisions: problem description.

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -355,6 +355,12 @@
 	howpublished = {\url{https://www.bittorrent.org/beps/bep_0003.html}}
 }
 
+@inproceedings{cohen-titfortat,
+  title={Incentives build robustness in BitTorrent},
+  author={Cohen, Bram},
+  year={2003}
+}
+
 
 @incollection{asokan-fairexchange,
   title={Optimistic fair exchange of digital signatures},
