--- a/design/design.tex
+++ b/design/design.tex
@@ -1,4 +1,5 @@
 \chapter{Design and implementation}
+\label{chapt:design}
 This chapter presents the design of MultiChain and how it was implemented.
 The first thing that will be introduced is how MultiChain is implemented within Tribler
 to outline the context of the design and implementation.
